src/main/resources/resources/css/profile.css
.profile-container .next-level {
    position: absolute;
    right: 0;
    top: 20px;
}
.profile-container .reward-container {
    margin-top: 25px;
}
.profile-container .reward-container ul {
    list-style: none;
    padding-left: 0;
}
.profile-container .reward-container ul li .reward {
    color: #d9534f;
}

.profile-container .item-container ul{
    padding-left: 0;
}
.profile-container .item-container ul li.no-item,
.profile-container .reward-container ul li.no-reward {
    font-style: italic;
}
.profile-container .item-container .avatar-selector {
    padding: 15px 0;
}
.profile-container .item-container .avatar-selector ul {
    list-style: none;
    max-height: 250px;
    overflow: auto;
}
.profile-container .item-container .avatar-selector .avatar-element {
    display: inline-block;
    margin-right: 5px;
    cursor: pointer;
    border: 1px solid lightgray;
    border-radius: 5px;
    width: 70px;
    height: 70px;
    overflow: hidden;
}
.profile-container .item-container .avatar-selector .avatar-element > span {
    position: relative;
    width: 100%;
    height: 100%;
    display: block;
}
.profile-container .item-container .avatar-selector .avatar-element > span > img {
    position: absolute;
    bottom: 0;
    width: 100px;
    height: initial;
    left: -23px;
}
.profile-container .item-container .avatar-selector .avatar-element.gadget > span > img,
.profile-container .item-container .avatar-selector .avatar-element.face > span > img {
    bottom: -10px;
    left: -15px;
}
.profile-container .item-container .avatar-selector .avatar-element.hair > span > img {
    bottom: 0;
    width: 70px;
    left: -2px;
}
.profile-container .item-container .avatar-selector .avatar-element.head > span > img {
    width: 70px;
    left: 0;
}
.profile-container .item-container .avatar-selector .avatar-element.clothes > span > img {
    left: -16px;
}
.profile-container .item-container .avatar-selector .avatar-element.active {
    box-shadow: 0 0 5px #f5d09c;
    border: 3px solid #f5d09c;
}
.profile-container .item-container .avatar-selector .avatar-element img {
    width: 70px;
    height: 70px;
}
.profile-container .item-container .avatar-selector .avatar-element.locked {
    opacity: 0.6;
    cursor: initial;
    background-color: lightgray;
}
.profile-container .item-container .avatar-selector .avatar-element.locked span.badge {
    position: absolute;
    margin-left: 45px;
    background-color: orange;
    top: 2px;
}
.profile-container .item-container button {
    position: absolute;
    right: 15px;
    top: 72px;
}
@media (min-width: 768px) {
    .profile-container .item-container button {
        top: 90px;
    }
    .profile-container .reward-container ul {
        padding-left: initial;
    }
}

